--- a/lib/css/header.css
+++ b/lib/css/header.css
@@ -1,7 +1,57 @@
 /*--------------------------------------
-header
+#header
 --------------------------------------*/
-header {
+#header {
   position: fixed;
-  top:0;
+  top: 0;
+  width: 100%
+}
+
+#header .navbar {
+  padding: 0
+}
+
+#header .container {
+  width: 100%;
+  max-width: 100%;
+  padding: 1.5rem;
+}
+
+#header .logo img {
+  width: 210px
+}
+
+#header .logo p {
+  font-size: .9rem;
+  line-height: 1rem;
+  margin: 0 0 0 20px;
+}
+
+#header ul {
+  margin: 0 !important;
+  padding: 0 !important
+}
+
+#header ul li {
+  font-size: .9rem
+}
+
+#header ul li a {
+  display: block;
+  color: #fff;
+}
+
+@media(max-width:480px) {
+  #header .logo img {
+    width: 130px
+  }
+
+  #header .container {
+    padding: 1rem;
+  }
+
+  #header .logo p {
+    font-size: .5rem;
+    margin: 0 0 0 10px;
+  }
 }
