--- a/lib/css/top.css
+++ b/lib/css/top.css
@@ -79,7 +79,7 @@
   border-bottom: 1px solid #EAEFF4
 }
 
-#top-news ul li a {
+#top-news ul li>a {
   display: block;
   padding: 1.3rem 0;
 }
@@ -96,12 +96,15 @@
 }
 
 #top-news ul li div p.cat {
-  font-size: .7rem;
-  color: #fff;
+  font-size: .6rem;
   background: #7E13AB;
   padding: 3px 10px;
   margin: 0 0 0 10px;
   letter-spacing: 0rem;
+}
+
+#top-news ul li div p.cat a{
+  color: #fff!important;
 }
 
 #top-news ul li>a>p {
@@ -120,7 +123,7 @@
 }
 
 #top-research ul li {
-  width: 33%;
+  width: 32%;
 }
 
 #top-research ul li a {
