--- a/lib/css/common.css
+++ b/lib/css/common.css
@@ -65,6 +65,10 @@ a:hover {
 
 @media(max-width:1025px) {
   /*--スマホよこ--*/
+  .wrap {
+    width: 100%;
+    padding: 0 15px !important
+  }
 }
 
 @media(max-width:480px) {
@@ -387,4 +391,14 @@ a:hover {
   font-weight: bold;
   margin: 0 1rem 0 0;
   letter-spacing: .3rem
+}
+
+@media(max-width:480px) {
+  .ttl2 {
+    font-size: .8rem;
+  }
+
+  .ttl2 .eng {
+    font-size: 1.5rem;
+  }
 }
