レスポンシブ調整

--- a/lib/css/common.css
+++ b/lib/css/common.css
@@ -378,6 +378,13 @@ a:hover {
   border-right: 1px solid #fff
 }
 
+@media(max-width:480px) {
+  .btn-border {
+    width: 100%;
+    margin: 2rem auto 0 auto;
+  }
+}
+
 /*--------------------------------------見出し*/
 .ttl2 {
   font-size: 1rem;
@@ -396,6 +403,7 @@ a:hover {
 @media(max-width:480px) {
   .ttl2 {
     font-size: .8rem;
+    margin: 0 0 2rem 0;
   }
 
   .ttl2 .eng {
