--- a/lib/css/common.css
+++ b/lib/css/common.css
@@ -69,6 +69,9 @@ a:hover {
     width: 100%;
     padding: 0 15px !important
   }
+  .sec {
+    padding: 60px 0
+  }
 }
 
 @media(max-width:480px) {
