--- a/lib/css/under-common.css
+++ b/lib/css/under-common.css
@@ -64,6 +64,16 @@
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important
 }
 
+@media(max-width:1025px) {
+  #sub-mv {
+    top: 70px;
+    margin-bottom: 70px
+  }
+  #sub-mv>div.flex {
+    height: 200px
+  }
+}
+
 @media(max-width:480px) {
 
   /*--スマホたて--*/
