--- a/lib/css/mv.css
+++ b/lib/css/mv.css
@@ -1,4 +1,89 @@
 /*--------------------------------------
+#mv
+--------------------------------------*/
+#mv {
+  background: url('../images/top/mv.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+#mv .content {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  position: relative;
+}
+
+#mv .content::before, #mv .content::after {
+  content: '';
+  display: block;
+  width: 27px;
+  height: 27px;
+  transform: rotate(-45deg);
+}
+
+#mv .content::before {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-bottom: 1px solid #fff;
+}
+
+#mv .content::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top: 1px solid #fff;
+}
+
+#mv .content p {
+  font-size: 1.75rem;
+  letter-spacing: .3rem;
+  margin: 0;
+  line-height: 2.5rem
+}
+
+#mv .content p.eng {
+  font-size: 1rem;
+  margin-top: 1rem;
+  letter-spacing: .3rem;
+}
+
+@media(max-width:1025px) {
+  #mv .content {
+    width: 70%;
+  }
+}
+
+@media(max-width:980px) {
+  #mv .content {
+    width: 80%;
+  }
+}
+
+@media(max-width:480px) {
+
+  /*--スマホたて--*/
+  #mv .content {
+    width: 80%;
+  }
+
+  #mv .content p {
+    font-size: 1.3rem;
+  }
+
+  #mv .content p.eng {
+    font-size: .8rem;
+    line-height: 1.5rem;
+  }
+}
+
+/*--------------------------------------
 #sub-mv
 --------------------------------------*/
 #sub-mv {
@@ -67,19 +152,21 @@
 @media(max-width:1025px) {
   #sub-mv {
     top: 70px;
-    margin-bottom: 70px
+    margin-bottom: 70px;
+    height: auto;
   }
   #sub-mv>div.flex {
-    height: 200px
+    height: auto
+  }
+  #sub-mv .content {
+    width: 80%;
+    margin: 3rem auto;
   }
 }
 
 @media(max-width:480px) {
 
   /*--スマホたて--*/
-  #sub-mv .content {
-    width: 80%;
-  }
 
   #sub-mv .content h2 {
     font-size: 1.3rem;
